2003-11-07  JP Rosevear <jpr@ximian.com>

	* util/Makefile.am: dist the marshal list

2003-11-07  JP Rosevear <jpr@ximian.com>

	* gui/widgets/e-addressbook-view.c (change_view_type): don't
	destroy the widget here - its dead when removed from the paned
	container

2003-11-07  JP Rosevear <jpr@ximian.com>

	* In the gui this is a search and replace commit for moving the
	addressbook to evolution-data-server; it also deletes the old
	backend files

2003-11-05  Larry Ewing  <lewing@ximian.com>

	* gui/widgets/e-addressbook-view.c (create_minicard_view): fix cast.

2003-11-03  Ettore Perazzoli  <ettore@ximian.com>

	* gui/component/select-names/e-select-names-factory.c: Update
	factory ID.

	* gui/component/select-names/GNOME_Evolution_Addressbook_SelectNames.server.in.in:
	Version the SelectNames server IDs by appending a "_2".

2003-11-03  Ettore Perazzoli  <ettore@ximian.com>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: Change
	"evolution:config_item" into "evolution2:config_item".

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: add the
	S/MIME config control here.

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* backend/ebook/e-book-listener.c (e_book_listener_new): change
	the poa hint to PER_REQUEST.  fixes a couple of deadlocks.

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* gui/component/component-factory.c (factory): ifdef the smime
	code with HAVE_NSS.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	conditionally include libevolution-smime.la.

2003-10-24  Dan Winship  <danw@ximian.com>

	* backend/pas/Makefile.am (libpas_la_LIBADD): libpas should depend
	on libebook, but NOT on libpasfile, etc, since it needs to be
	linked into all backends, not just the wombat.
	(libpasfile_la_LIBADD): depend on libpas.la and libedb3util.la
	(libpasvcf_la_LIBADD): depend on libpas.la
	(libpasldap_la_LIBADD): depend on libpas.la and  $(LDAP_LIBS)
